Changed prettier line length from 140 to 120 to match other VSCode settings

--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
         <hr />
 
         <p>
-          Welcome to my portfolio website. I am Chris Bilger, a senior software engineer with a multifaceted background including
-          engineering, education, and leadership. I am currently employed at Lockheed Martin, where I bring my expertise in full-stack
-          application development to the design, build, testing, and deployment of enterprise solutions.
+          Welcome to my portfolio website. I am Chris Bilger, a senior software engineer with a multifaceted background
+          including engineering, education, and leadership. I am currently employed at Lockheed Martin, where I bring my
+          expertise in full-stack application development to the design, build, testing, and deployment of enterprise
+          solutions.
         </p>
 
         <p>
-          I am dedicated to a continuous process of learning, teaching, discovery, and creation across all aspects of my life. I strive to
-          expand my knowledge on a daily basis, both within my professional career and in my personal pursuits and hobbies. I am committed
-          to sharing my newfound insights with others. I have established a long-term plan for developing tools aimed at enhancing people's
-          lives through increased efficiency, safety, and ease.
+          I am dedicated to a continuous process of learning, teaching, discovery, and creation across all aspects of my
+          life. I strive to expand my knowledge on a daily basis, both within my professional career and in my personal
+          pursuits and hobbies. I am committed to sharing my newfound insights with others. I have established a
+          long-term plan for developing tools aimed at enhancing people's lives through increased efficiency, safety,
+          and ease.
         </p>
       </section>
 
@@ -104,21 +106,23 @@
 
             <ol>
               <li>
-                As a software engineer on the Oasis Base development team, I have been actively involved in the design, development, and
-                deployment of software solutions.
+                As a software engineer on the Oasis Base development team, I have been actively involved in the design,
+                development, and deployment of software solutions.
               </li>
 
               <li>
-                I took the lead role in the IRAD effort to build out an enterprise offering of APICurio Registry & APICurio Studio,
-                utilizing my skills and experience to ensure the success of this project.
+                I took the lead role in the IRAD effort to build out an enterprise offering of APICurio Registry &
+                APICurio Studio, utilizing my skills and experience to ensure the success of this project.
               </li>
 
               <li>
-                As a member of the architecture team, I have contributed to the design of many new features, RFIs, RFPs, and future IRADs.
+                As a member of the architecture team, I have contributed to the design of many new features, RFIs, RFPs,
+                and future IRADs.
               </li>
 
               <li>
-                I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the organization.
+                I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the
+                organization.
               </li>
             </ol>
           </details>
@@ -130,8 +134,8 @@
           <p>October 2022 - January 2023</p>
 
           <p>
-            A 12-week period of parental leave dedicated to supporting my partner during the postpartum period and fostering a strong bond
-            with our newly-born child.
+            A 12-week period of parental leave dedicated to supporting my partner during the postpartum period and
+            fostering a strong bond with our newly-born child.
           </p>
         </aside>
 
@@ -146,23 +150,24 @@
 
             <ol>
               <li>
-                Contributed as a software engineer to the Oasis Base development team, leveraging my technical proficiency and teamwork
-                skills to deliver high-quality software solutions.
+                Contributed as a software engineer to the Oasis Base development team, leveraging my technical
+                proficiency and teamwork skills to deliver high-quality software solutions.
               </li>
 
               <li>
-                Collaborated with the SCOT K2 development team, traveling to the Republic of Korea to support on-site software development
-                efforts.
+                Collaborated with the SCOT K2 development team, traveling to the Republic of Korea to support on-site
+                software development efforts.
               </li>
 
               <li>
-                Served as the primary software engineer on an IRAD project aimed at modernizing Oasis Base 3rd-party API integration,
-                demonstrating my ability to manage complex software development projects and my expertise in API integration.
+                Served as the primary software engineer on an IRAD project aimed at modernizing Oasis Base 3rd-party API
+                integration, demonstrating my ability to manage complex software development projects and my expertise
+                in API integration.
               </li>
 
               <li>
-                Mentored two new employees as a New Hire Mentor, imparting my knowledge and experience to help them quickly integrate into
-                the organization and build a strong foundation in their roles.
+                Mentored two new employees as a New Hire Mentor, imparting my knowledge and experience to help them
+                quickly integrate into the organization and build a strong foundation in their roles.
               </li>
             </ol>
           </details>
@@ -228,8 +233,8 @@
           </p>
           <p>May 2022 - June 2022</p>
           <p>
-            Crisp is a dialect of the functional programming language Lisp. This is a toy programming language used for learning about
-            interpreters, virtual machines, and compilers.
+            Crisp is a dialect of the functional programming language Lisp. This is a toy programming language used for
+            learning about interpreters, virtual machines, and compilers.
           </p>
         </aside>
 
@@ -244,7 +249,8 @@
           <p>January 2022 - May 2022</p>
           <p>
             <q cite="https://geti2p.net/"
-              >Every day people use the network to connect with people without worry of being tracked or their data being collected.</q
+              >Every day people use the network to connect with people without worry of being tracked or their data
+              being collected.</q
             >
             - geti2p.net
           </p>
@@ -259,27 +265,27 @@
         <hr />
 
         <p>
-          I have a proven track record of working on high-output Agile teams using both Scrum and Kanban methodologies. My experience
-          encompasses self-hosted GitLab instances and full Atlassian suite production environments, and I have the technical skills
-          required to plan, implement, and maintain complex and dynamic systems.
+          I have a proven track record of working on high-output Agile teams using both Scrum and Kanban methodologies.
+          My experience encompasses self-hosted GitLab instances and full Atlassian suite production environments, and I
+          have the technical skills required to plan, implement, and maintain complex and dynamic systems.
         </p>
 
         <p>
-          As a full-stack software engineer, I have a responsibility to remain current with the latest trends in frontend, middleware, and
-          backend web development technologies. I have professional experience working with a variety of tech stacks, including MERN, MEVN,
-          Django, Java Springboot, AWS, and Azure, among others.
+          As a full-stack software engineer, I have a responsibility to remain current with the latest trends in
+          frontend, middleware, and backend web development technologies. I have professional experience working with a
+          variety of tech stacks, including MERN, MEVN, Django, Java Springboot, AWS, and Azure, among others.
         </p>
 
         <p>
-          I have a strong proficiency in React and Vue as frontend frameworks, Express JS as middleware, and NodeJS and Django on the
-          backend. My database expertise encompasses both SQL and NoSQL databases.
+          I have a strong proficiency in React and Vue as frontend frameworks, Express JS as middleware, and NodeJS and
+          Django on the backend. My database expertise encompasses both SQL and NoSQL databases.
         </p>
 
         <p>
-          I continuously expand my knowledge and skills in various areas of software engineering, including frameworks, methodologies, tech
-          stacks, development workflows, and processes. I place a high emphasis on producing well-written, thought-out code and ensure that
-          my code is properly documented, linted, formatted, and style checked. I am committed to consistently delivering high-quality
-          software engineering solutions.
+          I continuously expand my knowledge and skills in various areas of software engineering, including frameworks,
+          methodologies, tech stacks, development workflows, and processes. I place a high emphasis on producing
+          well-written, thought-out code and ensure that my code is properly documented, linted, formatted, and style
+          checked. I am committed to consistently delivering high-quality software engineering solutions.
         </p>
       </section>
 
@@ -291,21 +297,24 @@
         <hr />
 
         <p>
-          <b class="certification-and-course-title">Wolfram U - Wolfram Notebooks: Building and Sharing Technical Workflows</b>
+          <b class="certification-and-course-title"
+            >Wolfram U - Wolfram Notebooks: Building and Sharing Technical Workflows</b
+          >
           <br />
-          This course shows how you can combine the Wolfram Language with the notebook interface to express your ideas and develop technical
-          workflows for data science, modeling, research, education and more.
+          This course shows how you can combine the Wolfram Language with the notebook interface to express your ideas
+          and develop technical workflows for data science, modeling, research, education and more.
           <br />
           <em class="certification-and-course-date">March 2023</em>
         </p>
 
         <p>
           <b class="certification-and-course-title"
-            >Wolfram U - Deploying Computational Web Services: Getting Started with APIs, Dynamic Content and Web Apps</b
+            >Wolfram U - Deploying Computational Web Services: Getting Started with APIs, Dynamic Content and Web
+            Apps</b
           >
           <br />
-          Discover how simple it is to create powerful tools and make them available throughout your company or to the wider public using
-          APIs, cloud notebooks, forms and dynamic web content.
+          Discover how simple it is to create powerful tools and make them available throughout your company or to the
+          wider public using APIs, cloud notebooks, forms and dynamic web content.
           <br />
           <em class="certification-and-course-date">March 2023</em>
         </p>
@@ -321,7 +330,8 @@
         <p>
           <b class="certification-and-course-title">Wolfram U - Quick Start to Wolfram Tech</b>
           <br />
-          This instructor-led session introduces core technologies for getting started quickly with the Wolfram Technology stack.
+          This instructor-led session introduces core technologies for getting started quickly with the Wolfram
+          Technology stack.
           <br />
           <em class="certification-and-course-date">March 2023</em>
         </p>
@@ -338,9 +348,10 @@
           <b class="certification-and-course-title">LinkedIn Learning: Become a Thought Leader</b>
           <br />
           <q cite="https://www.linkedin.com/learning/paths/become-a-thought-leader"
-            >Thought leaders stand out from the rest in their field—they create their own advantage to advance faster in their careers,
-            attract more business, build more wealth, and spread their message. Learn how to take what you know, what you do, and who you
-            are and share it more widely and effectively to be known as an expert in your industry.</q
+            >Thought leaders stand out from the rest in their field—they create their own advantage to advance faster in
+            their careers, attract more business, build more wealth, and spread their message. Learn how to take what
+            you know, what you do, and who you are and share it more widely and effectively to be known as an expert in
+            your industry.</q
           >
           <br />
           <em class="certification-and-course-date">August 2022 - Forever</em>
@@ -349,8 +360,9 @@
         <p>
           <b class="certification-and-course-title">LinkedIn Learning: Master the OWASP Top 10</b>
           <br />
-          LinkedIn Learning course for mastering the OWASP Top 10, which An online course offered by LinkedIn Learning to achieve
-          proficiency in the OWASP Top 10, a widely accepted guide for web application security in the developer world.
+          LinkedIn Learning course for mastering the OWASP Top 10, which An online course offered by LinkedIn Learning
+          to achieve proficiency in the OWASP Top 10, a widely accepted guide for web application security in the
+          developer world.
           <br />
           <em class="certification-and-course-date">August 2022 - Forever</em>
         </p>
@@ -358,9 +370,9 @@
         <p>
           <b class="certification-and-course-title">DevOps Engineering on AWS</b>
           <br />
-          Accredited through ExitCertified, this certification enhances and verifies my knowledge of developer operations for engineering on
-          Amazon Web Services (AWS). Over a 3-day (24 total hours) training session, I learned about AWS cloud computing services and then
-          passed the examination for using the skills learned.
+          Accredited through ExitCertified, this certification enhances and verifies my knowledge of developer
+          operations for engineering on Amazon Web Services (AWS). Over a 3-day (24 total hours) training session, I
+          learned about AWS cloud computing services and then passed the examination for using the skills learned.
           <br />
           <em class="certification-and-course-date">June 2021 - Forever</em>
         </p>
@@ -368,7 +380,8 @@
         <p>
           <b class="certification-and-course-title">United States Security Clearance - Secret</b>
           <br />
-          Granted by the United States Department of Defense (DOD) and Defense Counterintelligence and Security Agency (DCSA).
+          Granted by the United States Department of Defense (DOD) and Defense Counterintelligence and Security Agency
+          (DCSA).
           <br />
           <em class="certification-and-course-date">July 2020 - <b>Present</b></em>
         </p>
