--- a/projects/cube-mate/index.html
+++ b/projects/cube-mate/index.html
@@ -22,9 +22,10 @@
       <h1>Cube Mate (Rubik's Cube Tools)</h1>
 
       <p>
-        <b>Cube Mate</b> is an extremely minimal set of tools that I am using to learn (at my own pace) efficient Rubik's Cube solving
-        methods. If you wish to use better tools, look into the website <a href="https://cstimer.net/" target="_blank">cstimer.net</a>. No
-        data/information/values/etc. is sent away from your local browser instance.
+        <b>Cube Mate</b> is an extremely minimal set of tools that I am using to learn (at my own pace) efficient
+        Rubik's Cube solving methods. If you wish to use better tools, look into the website
+        <a href="https://cstimer.net/" target="_blank">cstimer.net</a>. No data/information/values/etc. is sent away
+        from your local browser instance.
       </p>
     </main>
 
@@ -53,7 +54,8 @@
             this.timerCurrentTime = 0;
             this.timerHTMLElement = document.createElement("h2");
 
-            this.timerHistory = this.loadTimerHistoryFromLocalStorage() || JSON.parse(JSON.stringify(TIMER_HISTORY_TEMPLATE));
+            this.timerHistory =
+              this.loadTimerHistoryFromLocalStorage() || JSON.parse(JSON.stringify(TIMER_HISTORY_TEMPLATE));
 
             this.saveTimerHistoryToLocalStorage();
 
@@ -73,7 +75,26 @@
           }
 
           generateRandomScramble() {
-            const options = ["F", "F2", "F'", "R", "R2", "R'", "U", "U2", "U'", "B", "B2", "B'", "L", "L2", "L'", "D", "D2", "D'"];
+            const options = [
+              "F",
+              "F2",
+              "F'",
+              "R",
+              "R2",
+              "R'",
+              "U",
+              "U2",
+              "U'",
+              "B",
+              "B2",
+              "B'",
+              "L",
+              "L2",
+              "L'",
+              "D",
+              "D2",
+              "D'",
+            ];
             const numOptions = [0, 1, 2, 3, 4, 5];
             let scramble = [];
             let scrambleMoves = [];
@@ -170,7 +191,8 @@
             let hours = Math.floor((time / (1000 * 60 * 60)) % 24);
             let minutes = Math.floor((time / (1000 * 60)) % 60);
 
-            milliseconds = milliseconds < 100 ? (milliseconds < 10 ? "00" + milliseconds : "0" + milliseconds) : milliseconds;
+            milliseconds =
+              milliseconds < 100 ? (milliseconds < 10 ? "00" + milliseconds : "0" + milliseconds) : milliseconds;
             seconds = seconds < 10 ? "0" + seconds : seconds;
             minutes = minutes < 10 ? "0" + minutes : minutes;
             hours = hours < 10 ? "0" + hours : hours;
@@ -192,37 +214,53 @@
             };
 
             const pb = document.createElement("p");
-            const tempPB = this.convertTimeToHumanReadableString(Math.min(...this.timerHistory.slice(12, this.timerHistory.length)));
+            const tempPB = this.convertTimeToHumanReadableString(
+              Math.min(...this.timerHistory.slice(12, this.timerHistory.length))
+            );
             pb.innerHTML = `PB: ${
-              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 1 ? tempPB : this.convertTimeToHumanReadableString(0)
+              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 1
+                ? tempPB
+                : this.convertTimeToHumanReadableString(0)
             }`;
             this.timerHistoryHTMLElement.appendChild(pb);
 
             const currentAo5 = document.createElement("p");
-            const tempAo5 = this.convertTimeToHumanReadableString(this.timerHistory.slice(-5).reduce((a, b) => a + b) / 5);
+            const tempAo5 = this.convertTimeToHumanReadableString(
+              this.timerHistory.slice(-5).reduce((a, b) => a + b) / 5
+            );
             currentAo5.innerHTML = `Current Ao5: ${
-              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 5 ? tempAo5 : this.convertTimeToHumanReadableString(0)
+              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 5
+                ? tempAo5
+                : this.convertTimeToHumanReadableString(0)
             }`;
             this.timerHistoryHTMLElement.appendChild(currentAo5);
 
             const bestAo5 = document.createElement("p");
             const tempBestAo5 = this.convertTimeToHumanReadableString(getBestAverageOfN(5));
             bestAo5.innerHTML = `Best Ao5: ${
-              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 5 ? tempBestAo5 : this.convertTimeToHumanReadableString(0)
+              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 5
+                ? tempBestAo5
+                : this.convertTimeToHumanReadableString(0)
             }`;
             this.timerHistoryHTMLElement.appendChild(bestAo5);
 
             const currentAo12 = document.createElement("p");
-            const tempAo12 = this.convertTimeToHumanReadableString(this.timerHistory.slice(-12).reduce((a, b) => a + b) / 12);
+            const tempAo12 = this.convertTimeToHumanReadableString(
+              this.timerHistory.slice(-12).reduce((a, b) => a + b) / 12
+            );
             currentAo12.innerHTML = `Current Ao12: ${
-              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 12 ? tempAo12 : this.convertTimeToHumanReadableString(0)
+              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 12
+                ? tempAo12
+                : this.convertTimeToHumanReadableString(0)
             }`;
             this.timerHistoryHTMLElement.appendChild(currentAo12);
 
             const bestAo12 = document.createElement("p");
             const tempBestAo12 = this.convertTimeToHumanReadableString(getBestAverageOfN(12));
             bestAo12.innerHTML = `Best Ao12: ${
-              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 12 ? tempBestAo12 : this.convertTimeToHumanReadableString(0)
+              this.timerHistory.length >= TIMER_HISTORY_TEMPLATE.length + 12
+                ? tempBestAo12
+                : this.convertTimeToHumanReadableString(0)
             }`;
             this.timerHistoryHTMLElement.appendChild(bestAo12);
           }
@@ -313,9 +351,11 @@
                   the timer.
                 </p>
 
-                <input type="submit" value="Start/Stop Timer" onclick="${() => this.toggleTimerRunningState()}" class="button-row" />
+                <input type="submit" value="Start/Stop Timer" onclick="${() =>
+                  this.toggleTimerRunningState()}" class="button-row" />
                 <input type="submit" value="Reset Timer" onclick="${() => this.resetTimer()}" class="button-row" />
-                <input type="submit" value="Reset Timer History" onclick="${() => this.resetTimerHistory()}" class="button-row" />
+                <input type="submit" value="Reset Timer History" onclick="${() =>
+                  this.resetTimerHistory()}" class="button-row" />
 
                 ${this.timerHTMLElement}
                 ${this.timerHistoryHTMLElement}
