--- a/projects/js-clipboard/index.html
+++ b/projects/js-clipboard/index.html
@@ -22,19 +22,23 @@
       <h1>JS Clipboard</h1>
 
       <p>
-        The <b>JavaScript Clipboard API</b> is a tool for web developers that allows them to access and interact with the clipboard of a
-        user's device. This can include copying and pasting text, images, or other data to and from the clipboard.
+        The <b>JavaScript Clipboard API</b> is a tool for web developers that allows them to access and interact with
+        the clipboard of a user's device. This can include copying and pasting text, images, or other data to and from
+        the clipboard.
       </p>
 
       <p>
-        Imagine you have some text on a web page that you want to quickly copy to your computer's clipboard so you can paste it into another
-        document. Normally, you would have to right-click the text and select "copy" from the menu. However, with the Clipboard API, a web
-        developer can add a button to their page that, when clicked, automatically copies the text to your clipboard.
+        Imagine you have some text on a web page that you want to quickly copy to your computer's clipboard so you can
+        paste it into another document. Normally, you would have to right-click the text and select "copy" from the
+        menu. However, with the Clipboard API, a web developer can add a button to their page that, when clicked,
+        automatically copies the text to your clipboard.
       </p>
 
       <h2>Current Clipboard Contents:</h2>
 
-      <p id="clipboard-contents" style="color: rgb(136, 6, 6)">Please enable Clipboard access in order to view this project completely.</p>
+      <p id="clipboard-contents" style="color: rgb(136, 6, 6)">
+        Please enable Clipboard access in order to view this project completely.
+      </p>
     </main>
 
     <script type="module">
