--- a/projects/js-drag-and-drop/index.html
+++ b/projects/js-drag-and-drop/index.html
@@ -22,8 +22,8 @@
       <h1>JS Drag and Drop</h1>
 
       <p>
-        The <b>JS Drag and Drop API</b> is designed to allow the users the interact with content on the webpage by "dragging and dropping"
-        the content from one location to another.
+        The <b>JS Drag and Drop API</b> is designed to allow the users the interact with content on the webpage by
+        "dragging and dropping" the content from one location to another.
       </p>
     </main>
 
