--- a/projects/js-web-components/index.html
+++ b/projects/js-web-components/index.html
@@ -66,12 +66,16 @@
 
       <p>
         This project (<b>JS Web Components</b>) is an exploratory space designed for me to learn about
-        <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components" target="_blank">JavaScript Web Components</a>. These have been
-        on my radar for months and months by the time of this projects creation; however, I didn't think much of them until GitHub converted
-        their entire frontend stack from a JS UI Framework to JS Web Components.
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components" target="_blank"
+          >JavaScript Web Components</a
+        >. These have been on my radar for months and months by the time of this projects creation; however, I didn't
+        think much of them until GitHub converted their entire frontend stack from a JS UI Framework to JS Web
+        Components.
       </p>
 
-      <p>Below I am going to attach some simple web components onto the DOM and they should, hopefully, display properly.</p>
+      <p>
+        Below I am going to attach some simple web components onto the DOM and they should, hopefully, display properly.
+      </p>
 
       <time-formatted
         id="elem"
