--- a/projects/pokeapi-graphql/index.html
+++ b/projects/pokeapi-graphql/index.html
@@ -22,15 +22,17 @@
       <h1>PokeAPI - GraphQL</h1>
 
       <p>
-        The <b>PokeAPI</b> is a GraphQL API that provides access to information about the Pokémon universe, including Pokémon species,
-        abilities, moves, and more. It was created as a project by the community for the community and is open for anyone to use.
+        The <b>PokeAPI</b> is a GraphQL API that provides access to information about the Pokémon universe, including
+        Pokémon species, abilities, moves, and more. It was created as a project by the community for the community and
+        is open for anyone to use.
       </p>
 
       <p>
-        The PokeAPI provides a wealth of information for Pokémon fans and developers alike, allowing them to access data in a convenient and
-        standardized format. With the PokeAPI, you can retrieve information about specific Pokémon, such as their height, weight, types, and
-        abilities. You can also retrieve information about moves, abilities, and other game mechanics, making it a valuable resource for
-        developing Pokémon-related projects and applications.
+        The PokeAPI provides a wealth of information for Pokémon fans and developers alike, allowing them to access data
+        in a convenient and standardized format. With the PokeAPI, you can retrieve information about specific Pokémon,
+        such as their height, weight, types, and abilities. You can also retrieve information about moves, abilities,
+        and other game mechanics, making it a valuable resource for developing Pokémon-related projects and
+        applications.
       </p>
     </main>
 
@@ -112,7 +114,9 @@
                                   <p>${this.capitalizeFirstLetter(data.name)}</p>
                                   <p>${data.id}</p>
                                   <img
-                                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${data.id}.png"
+                                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${
+                                      data.id
+                                    }.png"
                                     alt="${data.name}"
                                     loading="lazy"
                                   />
