--- a/projects/side-notes/index.html
+++ b/projects/side-notes/index.html
@@ -22,9 +22,10 @@
       <h1>Side Notes (Note-Taking Web App)</h1>
 
       <p>
-        <b>Side Notes</b> is a minimal, light-weight, todo-style note keeping web application. Side Notes are emphemeral, short lasting and
-        residing solely in your browser storage. This web application keeps all data stored in the browser's internal database, meaning that
-        all side-notes reside only on this browser. Absolutely no data is ever sent away from your local browser.
+        <b>Side Notes</b> is a minimal, light-weight, todo-style note keeping web application. Side Notes are
+        emphemeral, short lasting and residing solely in your browser storage. This web application keeps all data
+        stored in the browser's internal database, meaning that all side-notes reside only on this browser. Absolutely
+        no data is ever sent away from your local browser.
       </p>
     </main>
 
