--- a/projects/js-web-workers/index.html
+++ b/projects/js-web-workers/index.html
@@ -22,9 +22,9 @@
       <h1>JS Web Workers</h1>
 
       <p>
-        <b>JS Web Workers</b> are designed for running JavaScript in background threads, such that they do not block execution of the main
-        (generally UI) thread. Generally speaking, it makes the most sense to place long network IO and large compute tasks onto web worker
-        threads.
+        <b>JS Web Workers</b> are designed for running JavaScript in background threads, such that they do not block
+        execution of the main (generally UI) thread. Generally speaking, it makes the most sense to place long network
+        IO and large compute tasks onto web worker threads.
       </p>
     </main>
 
