Added additional inforrmation for FFY

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <p>May 2023 - <b>Present</b></p>
 
           <a href="http://forfutureyou.com/" target="_blank">Product Website</a>
-          <p>Currently researching product-market fit while building out the minimum viable product (MVP).</p>
+          <p>Currently researching product-market fit while building out the MVP.</p>
+          <p><b>LLC has not yet been formed; waiting on business viability.</b></p>
         </aside> -->
 
         <aside>
