Updated resume and associated files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn</a>
             </li>
             <li>
-              <a href="./Christopher-Bilger-Resume-March-2023.pdf" target="_blank">Resume</a>
+              <a href="./Christopher-Bilger-Resume-April-2023.pdf" target="_blank">Resume</a>
             </li>
             <li>
               <a href="mailto:christopherbilg@gmail.com" target="_blank">Email</a>
@@ -348,7 +348,7 @@
           Granted by the United States Department of Defense (DOD) and Defense Counterintelligence and Security Agency
           (DCSA).
           <br />
-          <em class="certification-and-course-date">July 2020 - <b>Present</b></em>
+          <em class="certification-and-course-date">July 2020 - March 2023</em>
         </p>
       </section>
 
