Cleaned up index.html and added technical experience

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <p>
           Welcome to my portfolio website. I am Chris Bilger, a senior software engineer with a multifaceted background
-          including engineering, education, and leadership. I am currently employed at Lockheed Martin, where I bring my
+          including engineering, education, and leadership. I am currently employed at Talkiatry, where I bring my
           expertise in full-stack application development to the design, build, testing, and deployment of enterprise
           solutions.
         </p>
@@ -75,10 +75,9 @@
         <!-- <aside>
           <h3>Founder & Owner</h3>
           <p class="for-future-you">For Future You, LLC</p>
-          <p>May 2023 - <b>Present</b></p>
+          <p>January 2024 - <b>Present</b></p>
 
           <a href="http://forfutureyou.com/" target="_blank">Product Website</a>
-          <p>Currently researching product-market fit while building out the MVP.</p>
           <p><b>LLC has not yet been formed; waiting on business viability.</b></p>
         </aside> -->
 
@@ -216,6 +215,16 @@
           <a href="#technical-and-research-experience">Technical & Research Experience</a>
         </h2>
         <hr />
+
+        <!-- <aside>
+          <h3>Developer</h3>
+          <p>For Future You MVP</p>
+          <p>May 2023 - November 2023</p>
+          <p>
+            Timeboxed as a 6-month build-out phase of the MVP and to work with users to see if there is a product-market
+            fit.
+          </p>
+        </aside> -->
 
         <aside>
           <h3>Academic Research: M.C.S.</h3>
