--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
           <p>January 2024 - <b>Present</b></p>
 
           <a href="http://forfutureyou.com/" target="_blank">Product Website</a>
-          <p><b>LLC has not yet been formed; waiting on business viability.</b></p>
         </aside> -->
 
         <aside>
@@ -217,12 +216,12 @@
         <hr />
 
         <!-- <aside>
-          <h3>Developer</h3>
-          <p>For Future You MVP</p>
-          <p>May 2023 - November 2023</p>
+          <h3>Founding Developer</h3>
+          <p>For Future You - MVP</p>
+          <p>May 2023 - August 2023</p>
           <p>
-            Timeboxed as a 6-month build-out phase of the MVP and to work with users to see if there is a product-market
-            fit.
+            Timeboxed as a 3-month build-out phase of the MVP and to work with users to see if this is a worthwhile
+            venture.
           </p>
         </aside> -->
 
