--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
         <p>
           Welcome to my portfolio website. I am Chris Bilger, a senior software engineer with a multifaceted background
-          including engineering, education, and leadership. I am currently employed at Talkiatry, where I bring my
-          expertise in full-stack application development to the design, build, testing, and deployment of enterprise
-          solutions.
+          including engineering, education, and leadership. I work at Talkiatry, where I bring my expertise in
+          full-stack application development to the design, build, testing, and deployment of enterprise solutions.
         </p>
 
         <p>
@@ -76,6 +75,7 @@
           <h3>Senior Software Engineer</h3>
           <p class="talkiatry">Talkiatry, LLC</p>
           <p>April 2023 - <b>Present</b></p>
+          <code><b>Senior Software Engineer, Product (L2-2)</b></code>
 
           <details>
             <summary>A number of my memorable successes are:</summary>
@@ -90,7 +90,7 @@
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2022 - March 2023</p>
-          <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
+          <code><b>Member of Engineering Staff (L2)</b></code>
 
           <details>
             <summary>Among my notable accomplishments are:</summary>
@@ -134,7 +134,7 @@
           <h3>Associate Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
-          <code>Internal Position: <b>Associate Member of Engineering Staff (L1)</b></code>
+          <code><b>Associate Member of Engineering Staff (L1)</b></code>
 
           <details>
             <summary>Some of my key achievements include:</summary>
